support latest mod interface

--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,7 +4,8 @@ name="default"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="all_resources"
+export_filter="resources"
+export_files=PoolStringArray( "res://mods/example_mod.gd", "res://src/environments/example/Example.gd", "res://src/environments/example/Example.tscn", "res://src/environments/example/square.tscn" )
 include_filter=""
 exclude_filter=""
 export_path=""
