--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -4,23 +4,21 @@ name="default"
 platform="Linux/X11"
 runnable=true
 custom_features=""
-export_filter="resources"
-export_files=PoolStringArray( "res://mods/example_mod.gd", "res://src/environments/example/Example.gd", "res://src/environments/example/Example.tscn", "res://src/environments/example/square.tscn" )
+export_filter="all_resources"
 include_filter=""
 exclude_filter=""
 export_path=""
-patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
 
 [preset.0.options]
 
+custom_template/debug=""
+custom_template/release=""
+binary_format/64_bits=true
+binary_format/embed_pck=false
 texture_format/bptc=false
 texture_format/s3tc=true
 texture_format/etc=false
 texture_format/etc2=false
 texture_format/no_bptc_fallbacks=true
-binary_format/64_bits=true
-binary_format/embed_pck=false
-custom_template/release=""
-custom_template/debug=""
